[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Veio.gd" type="Script" id=1]
[ext_resource path="res://Sprites/gramps.png" type="Texture" id=2]
[ext_resource path="res://Sprites/granny.png" type="Texture" id=3]
[ext_resource path="res://Sprites/coronga.png" type="Texture" id=4]
[ext_resource path="res://Sprites/prim.png" type="Texture" id=5]
[ext_resource path="res://Sounds/SFX/Pickup_Sound.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/SFX/Hurt.wav" type="AudioStream" id=7]
[ext_resource path="res://Sprites/kokoro.png" type="Texture" id=8]

[sub_resource type="PhysicsMaterial" id=5]
bounce = 0.25

[sub_resource type="CircleShape2D" id=6]
radius = 19.9103

[sub_resource type="Animation" id=3]
resource_name = "flash"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Veios:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Veio" type="RigidBody2D"]
physics_material_override = SubResource( 5 )
gravity_scale = 5.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 3.0
anims/flash = SubResource( 3 )

[node name="Veios" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Pickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SFX"
[connection signal="body_entered" from="." to="." method="_on_Veio_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
